# kz_hate_speech_detection

./: Makefile  README.md  pyproject.toml  requirements.txt
data/raw/: ytb_comments (1).csv.dvc
docs/: Makefile  conf.py  index.rst  make.bat
src/data/: make_dataset.py
src/models/: prepare_datasets.py  train_model.py
